[package]
name = "pds"
version = "0.1.0"
authors = ["kilpatty <seanpkilgarriff@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Probabilistic Data Structures efficiently implemented in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
extended-primitives = { git="https://github.com/UrkelLabs/extended-primitives" }
fasthash = "0.4"
