[package]
name = "pds"
version = "0.2.0"
authors = ["Urkel Engineering <engineering@urkellabs.com>"]
edition = "2018"
license = "MIT"
description = "Probabilistic Data Structures efficiently implemented in Rust"

[dependencies]

#Known External
extended-primitives = "0.3.1"

#Unkown External
fasthash = "0.4"
